--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,6 @@
 Algorithm.iml
 app/app.iml
 app/build/
-gradle.properties
-gradlew
-gradlew.bat
 local.properties
-gradle/
+
+algorithm-practice.iml
